css/styles.css
body{
  font-family: "Montserrat";
}

#title{
  background-color: #ff4c81;
  color: white;

}

.container-fluid{
  padding: 3% 15% 7%;
}

h1 {
  font-family: "Montserrat";
  font-weight: 900;
  font-size: 3.5rem;
  line-height: 1.5;
}
h2{
  font-family: "Montserrat";
  font-weight: bold;
}
h3{
  padding-top: 8px;
  font-weight: bold;
}
/* navigation bar */
.navbar{
  padding: 0 0 4.5rem;
}

.navbar-brand{
  font-family: "Ubuntu";
  font-size: 2.5rem;
  font-weight: bold;
}

.nav-item{
  padding: 0 18px;
}
.nav-link{
  font-size: 1.2rem;
  font-weight: lighter;
}

/* download buttons */
.download-buttom{
  margin: 5% 3% 5% 0;
}

/* title image */

.title-image{
  width: 50%;
  transform: rotate(25deg);
  position: absolute;
  right: 30%;
}
/* features paragraphs, icons */
#features{
  background-color: white;
  position: relative;
}

.features{
  text-align: center;
  padding: 7% 15%;
}
.features-icons{
  color: #ef8172;
}
.features-icons:hover{
  color: #ff4c81;
}
.features-p{
  font-weight: lighter;
}
/* Testimonials section */
#testimonials{
  text-align: center;
  background-color: #ef8172;
  color: white;
}
.testimonial-image {
  width: 10%;
  border-radius: 100%;
  margin: 20px;
}
/* Press section */
#press{
  background-color: #ef8172;
  text-align:center;
  padding-bottom: 3%;
}
.press-logo{
  width: 15%;
  margin: 20px 20px 50px;
}
/* caraousel  */
.carousel-item{
  padding: 7% 15%;
}
/* pricing section */
#pricing{
  padding: 100px;
  text-align: center;
}
.pricing-column{
  padding: 3% 2%;
}
@media (max-width: 1028px){
  #title{
    text-align: center;
  }
  .title-image{
    position: static;
    transform: rotate(0);
  }
}
@media (max-width: 600px){
  .container-fluid{
    padding: 0;
  }
}

